# docs/swagger.json
@@ -5,6 +5,29 @@
     },
     "paths": {
         "/config": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "config"
+                ],
+                "summary": "Get configs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ConfigSt"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dopTypes.ErrRep"
+                        }
+                    }
+                }
+            },
             "put": {
                 "consumes": [
                     "application/json"
@@ -25,7 +48,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": ""
+                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -101,12 +124,7 @@
             }
         },
         "entities.DicSt": {
-            "type": "object",
-            "properties": {
-                "config": {
-                    "$ref": "#/definitions/entities.ConfigSt"
-                }
-            }
+            "type": "object"
         }
     }
 }
