# internal/domain/entities/dic.go
@@ -1,5 +1,4 @@
 package entities
 
 type DicSt struct {
-	Config *ConfigSt `json:"config"`
 }
